--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ dataset/
 models/
 
 shape_predictor_68_face_landmarks.dat
+Python_ConvolutionalNeuralNetwork_FaceRecognition_fatiguedriving-master/model
