--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@ models/
 shape_predictor_68_face_landmarks.dat
 Python_ConvolutionalNeuralNetwork_FaceRecognition_fatiguedriving-master/model
 Python_ConvolutionalNeuralNetwork_FaceRecognition_fatiguedriving-master/venv
-Python_ConvolutionalNeuralNetwork_FaceRecognition_fatiguedriving-master/output
+output
+
+*.log
